# alzheimer-classifier

./: .gitignore  Documento sin título 1  README.md  caller.py  cnn.py  coeff_saver.py  coursework.py  patient.py  preguntas  pyproject.toml  requirements.txt  resources
alzheimer_classifier/cnn/: cnn.py  raw_array_getter.py  raw_array_saver.py
alzheimer_classifier/common/: constants.py  patient.py
alzheimer_classifier/svm/: coeff_getter.py  coeff_saver.py  coeff_selector.py  svm.py
