[tool.poetry]
name = "alzheimer-classifier"
version = "0.1.0"
description = "Alzheimer's images processor"
authors = ["Julio Prado"]

[tool.poetry.dependencies]
python = "^3.8"
PyWavelets = "^1.1.1"
pandas = "^1.3.0"
opencv-python = "^4.5.2"
numpy = ">=1.19.2,<1.20.0"
sklearn = "^0.0"
statistics = "^1.0.3"
typer = "^0.3.2"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
